[gd_scene format=3 uid="uid://bl5y3cwaaem5o"]

[ext_resource type="PackedScene" uid="uid://d0pcx4itoqjyl" path="res://scenes/units/base_unit.tscn" id="1_7gynk"]
[ext_resource type="Script" uid="uid://byo07rlvo6y7k" path="res://scenes/battle/battle.gd" id="1_ffvsa"]
[ext_resource type="Script" uid="uid://bbguvi5othpwb" path="res://scenes/battle/unit_handler.gd" id="2_xd4uy"]
[ext_resource type="Script" uid="uid://5ymvubwn0ihg" path="res://scenes/battle/player_unit_input_handler.gd" id="4_0yh6x"]
[ext_resource type="Resource" uid="uid://hmeryarrcif8" path="res://resources/units/warrior_stats.tres" id="4_fisqk"]
[ext_resource type="Resource" uid="uid://dt2gyvaa3ueg7" path="res://resources/units/archer_enemy_stats.tres" id="5_pll4o"]
[ext_resource type="Resource" uid="uid://bctu1xpf38h62" path="res://resources/units/warrior_enemy_stats.tres" id="6_agsc7"]
[ext_resource type="PackedScene" uid="uid://3fnae1a2hyly" path="res://scenes/ui/battle_unit_selection_ui.tscn" id="6_fh7rg"]
[ext_resource type="Resource" uid="uid://dmu3hpc6xbi60" path="res://resources/units/monk_stats.tres" id="6_py4tk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0yh6x"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.9607843, 0.33333334, 0.8)

[node name="Battle" type="Node2D" unique_id=1474264238]
script = ExtResource("1_ffvsa")

[node name="UnitHandler" type="Node2D" parent="." unique_id=1885975638]
unique_name_in_owner = true
y_sort_enabled = true
script = ExtResource("2_xd4uy")

[node name="PlayerWarrior" parent="UnitHandler" unique_id=1848674949 instance=ExtResource("1_7gynk")]
position = Vector2(507, 243)
unit_stats = ExtResource("4_fisqk")

[node name="PlayerArcher" parent="UnitHandler" unique_id=719083008 instance=ExtResource("1_7gynk")]
position = Vector2(331, 208)

[node name="EnemyArcher" parent="UnitHandler" unique_id=1175937086 instance=ExtResource("1_7gynk")]
position = Vector2(234, 347)
unit_stats = ExtResource("5_pll4o")

[node name="EnemyWarrior" parent="UnitHandler" unique_id=838587457 instance=ExtResource("1_7gynk")]
position = Vector2(989, 419)
unit_stats = ExtResource("6_agsc7")

[node name="PlayerMonk" parent="UnitHandler" unique_id=1453757087 instance=ExtResource("1_7gynk")]
position = Vector2(432, 486)
unit_stats = ExtResource("6_py4tk")

[node name="PlayerUnitInputHandler" type="Node2D" parent="." unique_id=1615960026]
unique_name_in_owner = true
script = ExtResource("4_0yh6x")

[node name="SelectionBox" type="Panel" parent="PlayerUnitInputHandler" unique_id=133994408]
visible = false
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0yh6x")

[node name="BattleUI" type="CanvasLayer" parent="." unique_id=161730821]
unique_name_in_owner = true

[node name="HBoxContainer" type="HBoxContainer" parent="BattleUI" unique_id=109731403]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -282.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="Spacer" type="Control" parent="BattleUI/HBoxContainer" unique_id=1680689803]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleUnitSelectionUI" parent="BattleUI/HBoxContainer" unique_id=1282364949 instance=ExtResource("6_fh7rg")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="BattleUI/HBoxContainer" unique_id=1603145458]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitList" type="HBoxContainer" parent="BattleUI" unique_id=2080393248]
offset_left = 369.0
offset_top = 550.0
offset_right = 700.0
offset_bottom = 620.0

[node name="UnitName" type="Label" parent="BattleUI/UnitList" unique_id=74819057]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BattleUI" unique_id=912713]
offset_right = 40.0
offset_bottom = 40.0
